--- a/workflows/edit_eml/format_text.Rmd
+++ b/workflows/edit_eml/format_text.Rmd
@@ -1,6 +1,8 @@
 ## Format text in EML
 Currently, only certain fields (abstracts, methods) support text formatting in EML. Check out this [demo](https://github.nceas.ucsb.edu/KNB/arctic-data/blob/ac4cabed2ee9ff3654130ee162266174fafa003a/datateam/How_To/EML/EMl_textType_example.xml) for a full example. Additional info is also available [here](https://knb.ecoinformatics.org/#external//emlparser/docs/eml-2.1.1/./eml-text.html).
 
+Also note, you will need to [edit an EML section with EML](#edit-eml-with-eml) in order to use these workflows.
+
 ```{block, type="note"}
 Many of these formatting functions only work when enclosed by `<para></para>`
 ```
