--- a/workflows/misc_file_types/netCDF_chunk.Rmd
+++ b/workflows/misc_file_types/netCDF_chunk.Rmd
@@ -1,5 +1,5 @@
 
-## Working with netCDFs
+## netCDFs
 
 This section is for dealing with netCDF (.nc) files. These files require data tables but since they can not be simply opened on the computer using a text editor or Excel, you can use Panoply to explore them or these R commands:
 
