--- a/workflows/misc_file_types/datalogger_files.Rmd
+++ b/workflows/misc_file_types/datalogger_files.Rmd
@@ -1,5 +1,5 @@
 ## Datalogger files
 
-.hobo files are raw data files offloaded from a sensor, and can include real-time graphs of temperature and soil moisture conditions.
+.hobo files are raw data files offloaded from a sensor, and can include real-time graphs of measured variables, such as temperature and soil moisture conditions.
 
 .hobo files can be opened using HOBOware, which can be downloaded from [here](http://www.onsetcomp.com/hoboware-free-download). 
