generalized facet section

--- a/workflows/query_with_solr/use_facets.Rmd
+++ b/workflows/query_with_solr/use_facets.Rmd
@@ -1,9 +1,6 @@
 ## Use facets
 
-Above we went through querying across Solr documents but we can also summarize what's in Solr with Faceting which lets us group Solr documents together and count them.
-This is like `table` in R.
-Faceting can do a query within a query, but more commonly I use it to summarize unique values in a field.
-For example, we can find the unique format IDs on Data Objects:
+We can also summarize what's in Solr with [faceting](https://lucene.apache.org/solr/guide/7_3/faceting.html), which lets us **group** Solr documents together and **count** them. This is like `table` in R. Faceting can do a query within a query, but more commonly it's used to summarize unique values in a field. For example, we can find the unique format IDs on Data Objects:
 
 - https://arcticdata.io/metacat/d1/mn/v2/query/solr/?q=*:*&fq=formatType:DATA&facet=true&facet.field=formatId&rows=0
 
