--- a/workflows/query_with_solr/use_stats.Rmd
+++ b/workflows/query_with_solr/use_stats.Rmd
@@ -1,7 +1,6 @@
 ## Use stats
 
-With Faceting, we found we could make queries to find the unique values for a Solr field.
-With Stats, we can have Solr calculate statistics on numerical values (such as `fileSize`).
+With stats, we can have [Solr calculate statistics](https://lucene.apache.org/solr/guide/7_3/the-stats-component.html#the-stats-component) on numerical values (such as `fileSize`).
 
 - https://arcticdata.io/metacat/d1/mn/v2/query/solr/?q=formatType:DATA&stats=true&stats.field=size&rows=0
 
