--- a/workflows/query_with_solr/use_facets.Rmd
+++ b/workflows/query_with_solr/use_facets.Rmd
@@ -12,5 +12,7 @@ To facet, we usually do a few things:
 - Optionally specify `fq={expression}` which filters out Solr documents before faceting. In the above example, we have to do this to only count Data Objects. Without it, the facet result would include formatIDs for metadata and resource maps which we don't want.
 
 ```{block, type = "note"}
-Currently, the `dataone::query()` function does not support faceting, so you'll have to run your queries as a URL.
+Currently, the `dataone::query()` function does not support faceting, so you'll have to run your queries as a URL. 
+
+For additional ways to use faceting (such as pivot faceting), check out the [Solr documentation](https://lucene.apache.org/solr/guide/7_3/the-stats-component.html#the-stats-component).
 ```
