--- a/training/09_using_solr.Rmd
+++ b/training/09_using_solr.Rmd
@@ -1,15 +1,14 @@
 # Introduction to Solr
 
-Solr is what's known as an index.
-More specifically, it's a piece of software that we install with every instance of Metacat which we use to query all of the Objects Metacat stores (metadata, data, resource maps, etc.). [Metacat](https://www.dataone.org/software-tools/metacat) is our underlying metadata catalog and the foundation of our data repositories for both the CN and all MNs.
-Every Object in Metacat will have a corresponding Solr document for it that contains information about that Object.
-Each type of Object will have a different set of fields in its Solr document.
-For example, an EML document will have a `title` field (corresponding to the EML document's `<title>` element), while a CSV will not.
+Solr is what's known as an index, which helps us keep track of objects stored in our metadata catalog ([Metacat](https://www.dataone.org/software-tools/metacat)).
+
+Every object in Metacat has a corresponding Solr document for it that contains information about that object.
+Each type of Object will have a different set of fields in its Solr document. For example, an EML document will have a `title` field (corresponding to the EML document's `<title>` element), while a CSV will not.
 
 The fields that go into a Solr document are populated by information such as:
 
-- The System Metadata (fileName, accessPolicy, etc)
-- The Object itself (e.g. title, creators, etc. for an EML record)
+- The system metadata (fileName, accessPolicy, etc)
+- The object itself (e.g. title, creators, etc. for an EML record)
 - Additional computed fields (e.g., a geohash for quick spatial search)
 
 Indexing the Object's Metacat stores lets us execute some interesting and very useful queries such as:
@@ -18,19 +17,10 @@ Indexing the Object's Metacat stores lets us execute some interesting and very u
 - What Metadata and Data Objects are in a given Data Package?
 - What is the total size (in terms of disk space) of all Objects stored in Metacat?
 
-```{r, child = '../workflows/query_with_solr/query_solr_through_R.Rmd'}
+Querying Solr is possible [by tacking a query onto a base URL](#query-solr) or [through the `dataone::query()` function in R](#query-solr-through-R). For now, we'll just cover the basics of Solr queries in R. See the [Data Team References](https://nceas.github.io/datateam-training/reference/query-with-solr.html) for more on Solr.
+
+```{r, child = '../workflows/query_with_solr/construct_a_query.Rmd'}
 ```
 
-## Key takeaways
-
-- Find out what you can query at https://arcticdata.io/metacat/d1/mn/v2/query/solr
-- The Solr HTTP API is what the R `dataone` package uses when you run `query`
-- Pass a token if you want to include non-public-readable objects in the results (you often do!)
-
-These skills are highly transferable. Note the syntax of the URL for a Google search.
-
-## More resources
-
-- Solr's [The Standard Query Parser](https://cwiki.apache.org/confluence/display/solr/The+Standard+Query+Parser) docs (high level of detail)
-- Another quick reference: https://wiki.apache.org/solr/SolrQuerySyntax
-- http://www.solrtutorial.com/
+```{r, child = '../workflows/query_with_solr/query_solr_through_R.Rmd'}
+```
