--- a/training/09_using_solr.Rmd
+++ b/training/09_using_solr.Rmd
@@ -3,7 +3,7 @@
 Solr is what's known as an index, which helps us keep track of objects stored in our metadata catalog ([Metacat](https://www.dataone.org/software-tools/metacat)).
 
 Every object in Metacat has a corresponding Solr document for it that contains information about that object.
-Each type of Object will have a different set of fields in its Solr document. For example, an EML document will have a `title` field (corresponding to the EML document's `<title>` element), while a CSV will not.
+Each type of object will have a different set of fields in its Solr document. For example, an EML document will have a `title` field (corresponding to the EML document's `<title>` element), while a CSV will not.
 
 The fields that go into a Solr document are populated by information such as:
 
@@ -11,7 +11,7 @@ The fields that go into a Solr document are populated by information such as:
 - The object itself (e.g. title, creators, etc. for an EML record)
 - Additional computed fields (e.g., a geohash for quick spatial search)
 
-Indexing the Object's Metacat stores lets us execute some interesting and very useful queries such as:
+Indexing the object's Metacat stores lets us execute some interesting and very useful queries such as:
 
 - What are the most recently updated datasets?
 - What Metadata and Data Objects are in a given Data Package?
