--- a/workflows/solr_queries/query_solr_through_R.Rmd
+++ b/workflows/solr_queries/query_solr_through_R.Rmd
@@ -10,22 +10,22 @@ Well by default, all of those URLs above only returned publicly-readable Solr do
 If a private document matched any of those queries, Solr doesn't give you any idea and acts like the non-public-readable documents don't exist. So we must pass an authentication token to access non-public-readable content. This bit is crucial for working with the ADC, so you'll very often want to use R instead of visiting those URLs in a web browser.
 
 ```{r}
-library(dataone)
-cn <- CNode("PROD")
-mn <- getMNode(cn, "urn:node:ARCTIC")
+cn <- dataone::CNode("PROD")
+mn <- dataone::getMNode(cn, "urn:node:ARCTIC")
 # Set your token if you need/want!
 
-query(mn, list(q="title:*soil*",
-               fl="title",
-               rows="10"))
-#or alternatively: query(mn, "q=title:*soil*&fl=title&rows=10")
+#string your parameters together like this: dataone::query(mn, "q=title:*soil*&fl=title&rows=10")
+#or alternatively, list them out:
+dataone::query(mn, list(q="title:*soil*",
+                        fl="title",
+                        rows="10"))
 ```
 
 By default, `query` returns the result as a `list`, but a `data.frame` can be a more useful way to work with the result. To get a `data.frame` instead, just set the `as` argument to 'data.frame' to get a `data.frame`:
 
 ```{r eval = TRUE}
-query(mn, list(q="title:*soil*",
-               fl="title",
-               rows="10"),
-      as = "data.frame")
+dataone::query(mn, list(q="title:*soil*",
+                        fl="title",
+                        rows="10"),
+               as = "data.frame")
 ```
