--- a/workflows/solr_queries/construct_a_query.Rmd
+++ b/workflows/solr_queries/construct_a_query.Rmd
@@ -14,3 +14,15 @@ The query ('q') parameter uses a syntax that looks like `field:value`, where `fi
 ```{block, type = "note"}
 In the second example, the DOI PID is surrounded in double quotes. This is because Solr has [reserved characters](https://lucene.apache.org/core/2_9_4/queryparsersyntax.html), of which ':' is one, so we have to help Solr by surrounding values with reserved characters in them in quotes or escaping them.
 ```
+
+To view the list of query-able parameters on the Arctic Data Center and their descriptions, you can visit https://arcticdata.io/metacat/d1/mn/v2/query/solr. The list of parameters is also provided below:
+
+```{r echo = FALSE, warning = FALSE, message = FALSE}
+library(tidyverse)
+adc_solr <- httr::GET("https://arcticdata.io/metacat/d1/mn/v2/query/solr")
+
+adc_solr %>% 
+  str_extract_all("name>.*<") %>% 
+  unlist() %>% 
+  str_replace_all("name>|<", "")
+```
