--- a/workflows/solr_queries/construct_a_query.Rmd
+++ b/workflows/solr_queries/construct_a_query.Rmd
@@ -11,9 +11,11 @@ The most common parameters are:
 
 The query ('q') parameter uses a syntax that looks like `field:value`, where `field` is one of the Solr fields and `value` is an expression. The expression can match a specific value exactly, e.g., `q=identifier:arctic-data.7747.1` or `q=identifier:"doi:10.5065/D60P0X4S"`, which finds the Solr document for a specific Object by PID (identifier).
 
+
 ```{block, type = "note"}
-In the second example, the DOI PID is surrounded in double quotes. This is because Solr has [reserved characters](https://lucene.apache.org/core/2_9_4/queryparsersyntax.html), of which ':' is one, so we have to help Solr by surrounding values with reserved characters in them in quotes or escaping them.
+In the second example, the DOI PID is surrounded in double quotes. This is because Solr has [reserved characters](https://lucene.apache.org/core/2_9_4/queryparsersyntax.html), of which `:` is one, so we have to help Solr by surrounding values with reserved characters in them in quotes or escaping them.
 ```
+
 
 To view the list of query-able parameters on the Arctic Data Center and their descriptions, you can visit https://arcticdata.io/metacat/d1/mn/v2/query/solr. The list of parameters is also provided below:
 
