add warning/message = FALSE

--- a/workflows/solr_queries/xample_solr_queries.Rmd
+++ b/workflows/solr_queries/xample_solr_queries.Rmd
@@ -1,6 +1,6 @@
 ## Example Solr queries
 
-```{r echo = FALSE}
+```{r echo = FALSE, warning = FALSE, message = FALSE}
 library(knitr)
 library(magrittr)
 library(kableExtra)
